# PuckBarcodeReader

./: .coverage  .coveragerc  .gitignore  .travis.yml  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  build.bat  logconfig.py  main.py  requirements.txt  setup.cfg  setup.py  v1.5.0
dls_barcode/: README.md  __init__.py  barcode_config.py  camera_scanner.py  continuous.py  frame_grabber.py  frame_grabber_controller.py  frame_processor.py  frame_processor_controller.py  gui.py  image.py  main.py  main_manager.py  new_main_manager.py  options.py  processor.py  program_options.py  scanner.py  scanner_manager.py  scanner_timer.py  scanner_timer_manager.py  setup.py  store.py  version.py
dls_barcode/camera/: __init__.py  camera.py  camera_position.py  camera_scanner.py  camera_stream.py  camera_switch.py  capture_command.py  capture_worker.py  frame_processor.py  new_camera_switch.py  overlay.py  plate_overlay.py  result_processor.py  scanner_message.py  scanner_worker.py  stream_action.py  stream_manager.py
dls_barcode/config/: __init__.py  barcode_config.py  barcode_config_dialog.py  camera_config.py  camera_config_control.py  (+2 more)
dls_barcode/gui/: __init__.py  (+20 more)
dls_datamatrix/: Makefile  README  setup.py
dls_util/: __init__.py  beeper.py  object_with_lifetime.py  transform.py
docs/: SETUP.md  code.md  datamatrix-locator.md  datamatrix-reader.md  datamatrix.md  icons_tips.md  implementation.md  locator.md  problem.md  release-notes-dev.md  scanning.md  todo.md  unipuck.md
tests/: barcode_table_test.py  dm_reader_testbed.py  find_square.py  find_square_test.py  gui_test.py  scratchpad.py  system_tests.py  test_decode.py  test_reedsolo.py  transform_testbed.py  tray_testbed.py
(+223 files in other folders)
