[metadata]
name = dls_puck_scanner
version = file: dls_barcode/version.py
author = 'rqq82173,
author_email = 'urszula.neuman@diamond.ac.uk',
license = Apache License 2.0
description = Software used by Diamond XChem laboratory to scan codes placed on sample pins and on sample pucks.

[options]
packages = find:
install_requires=
    pyqt5
    opencv-python
    numpy
    scipy
    pyperclip
    pygelf
# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = False
