[metadata]
name = dls_puck_scanner
version = file: dls_barcode/version.py
author = 'rqq82173',
author_email = 'urszula.neuman@diamond.ac.uk',
license = Apache License 2.0
description = Software used by Diamond XChem laboratory to scan codes placed on sample pins and on sample pucks.

[options]
packages = find:
install_requires=
    pyqt5
    opencv-python
    numpy
    scipy
    pyperclip
    pygelf
# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = False

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
# Ignore unused imports/redefinitions in __init__.py
per-file-ignores =
    **/__init__.py: F401, F811
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --flake8 --mypy --isort --tb=native -vv